# python-ts-graphql-demo

./: .gitignore  README.md  app.py  codegen.yml  graphql.ts  models.py  mypy.ini  next.config.js  operation.graphql  package-lock.json  package.json  pyproject.toml  schema.graphql  tailwind.config.js
pages/: _app.tsx  index.tsx
