[tool.poetry]
name = "python-ts-graphql-demo"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {version = "^1.4.27", extras = ["asyncio"]}
strawberry-graphql = "^0.87.2"
starlette = "^0.17.1"
uvicorn = "^0.15.0"
aiosqlite = "^0.17.0"
greenlet = "^1.1.2"
aioredis = "^2.0.0"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.1"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 99

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin,sqlalchemy.ext.mypy.plugin"
implicit_reexport = false
